--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
 <navheader></navheader>
-<h1>
-  {{title}}
-</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12 col-xl-10">
+      <timerow></timerow>
+      <timerow></timerow>
+      <timerow></timerow>
+      <timerow></timerow>
+    </div>
+    <div class="col-md-12 col-xl-2">
+
+    </div>
+  </div>
+</div>
+
