--- a/src/app/components/navheader/navheader.component.css
+++ b/src/app/components/navheader/navheader.component.css
@@ -1,6 +1,7 @@
 .navbar {
   padding:0;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  margin-bottom: 1rem;
 }
 .navbar-brand{
   padding: .8rem 0;
