prefixed components with "ptc-" and generated summary component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
-<navheader></navheader>
+<ptc-navheader></ptc-navheader>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12 col-xl-10">
-      <timerow></timerow>
-      <timerow></timerow>
-      <timerow></timerow>
-      <timerow></timerow>
+      <ptc-timerow></ptc-timerow>
+      <ptc-timerow></ptc-timerow>
+      <ptc-timerow></ptc-timerow>
+      <ptc-timerow></ptc-timerow>
     </div>
     <div class="col-md-12 col-xl-2">
-
+      <ptc-summary></ptc-summary>
     </div>
   </div>
 </div>
