--- a/src/app/components/navheader/navheader.component.html
+++ b/src/app/components/navheader/navheader.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-full navbar-dark bg-inverse">
   <div class="container">
-    <a class="navbar-brand" href="#">PTC</a>
+    <a class="navbar-brand" href="#"><h1>Project Time Calculator</h1></a>
     <div class="nav navbar-nav">
       <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="#">Features</a>
