--- a/src/app/components/navheader/navheader.component.css
+++ b/src/app/components/navheader/navheader.component.css
@@ -1,17 +1,18 @@
-.navbar {
+:host .navbar {
   padding:0;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  z-index:100;
 }
-.navbar-brand{
+:host .navbar-brand{
   padding: 1rem 0 .8rem 0;
 }
 
-.navbar-brand h1 {
+:host .navbar-brand h1 {
   font-size:1.25rem;
   font-weight: lighter;
   margin:0;
 }
-.navbar .nav-link {
+:host .navbar .nav-link {
   padding: 1rem;
   margin-left: 0;
   -webkit-transition: background-color 0.3s, color 0.3s;
@@ -20,6 +21,6 @@
   -o-transition: background-color 0.3s, color 0.3s;
   transition: background-color 0.3s, color 0.3s;
 }
-.navbar .nav-link:hover {
+:host .navbar .nav-link:hover {
   background-color: hsl(204,4%,33%);
 }
