Replaced transition:top with transition: transform -> performance improvement.

--- a/src/app/components/dayselect/dayselect.component.css
+++ b/src/app/components/dayselect/dayselect.component.css
@@ -1,6 +1,5 @@
 :host.fullsize {
-  top: 0;
-  height: 100%;
+  transform: translateY(-56px);
 }
 
 :host {
@@ -8,7 +7,7 @@
   top: 56px;
   width: 100%;
   z-index: 100;
-  transition: top 0.3s ease;
+  transition: transform 0.3s ease;
 }
 
 :host .controls-container {
@@ -83,9 +82,9 @@
   margin-top: -12px;
 }
 
-:host /deep/ .dropdown-menu {
-  height: 100%;
-}
+/*:host /deep/ .dropdown-menu {*/
+  /*height: 100%;*/
+/*}*/
 
 :host /deep/ table {
   width: 100%;
