--- a/src/app/components/dayselect/dayselect.component.html
+++ b/src/app/components/dayselect/dayselect.component.html
@@ -2,7 +2,7 @@
   <button type="button">
     <i class="fa fa-angle-left"></i>
   </button>
-  <div class="text" (click)="d.toggle(); enableFullsize()">
+  <div class="text" (click)="d.toggle(); enableFullsize($event)">
     <div class="dropdown">
       23.
     </div>
