Dayselect: full page, day buttons have equal sizes.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,8 @@
 @media (max-width: 543px) {
-  :host .container-fluid {
+  :host > .container-fluid {
     padding:0;
   }
 }
-:host .container-fluid {
+:host > .container-fluid {
   margin-top: 4rem;
 }
