--- a/src/app/components/navheader/navheader.component.html
+++ b/src/app/components/navheader/navheader.component.html
@@ -5,7 +5,7 @@
         <span class="hamburger-inner"></span>
       </span>
     </button>
-    <a class="navbar-brand" href="#"><h1>Project Time Calculator</h1></a>
+    <a class="navbar-brand" href="#"><h1>Project Time Tracker</h1></a>
     <div class="nav navbar-nav">
       <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="#">Features</a>
