--- a/src/app/components/dayselect/dayselect.component.html
+++ b/src/app/components/dayselect/dayselect.component.html
@@ -1,5 +1,5 @@
 <div class="controls-container">
-  <button type="button" (click)="previousDay()">
+  <button type="button" (click)="previous(d)">
     <i class="fa fa-angle-left"></i>
   </button>
   <div class="text" (click)="d.toggle(); toggleFullsize($event)">
@@ -7,13 +7,13 @@
       {{selectedDay.day}}.
     </div>
     <div class="dropdown">
-      {{selectedDay.month }}
+      {{ navMonth | month:navMonth }}
     </div>
     <div class="dropdown">
-      {{selectedDay.year}}
+      {{ navYear }}
     </div>
   </div>
-  <button type="button" (click)="nextDay()">
+  <button type="button" (click)="next(d);">
     <i class="fa fa-angle-right"></i>
   </button>
 </div>
@@ -24,7 +24,7 @@
          [dayTemplate]="customDay" [navigation]="'none'"/>
 
   <template #customDay let-date="date" let-currentMonth="currentMonth" let-selected="selected" let-disabled="disabled">
-  <span class="custom-day" [class.bg-primary]="selected" (click)="toggleFullsize()"
+  <span class="custom-day" [class.bg-primary]="selected" (click)="toggleFullsize(d)"
         [class.text-muted]="disabled">
   {{ date.day }}
   </span>
