--- a/src/app/components/timerow/timerow.component.css
+++ b/src/app/components/timerow/timerow.component.css
@@ -1,4 +1,3 @@
-
 :host .timerow {
   background-color: white;
   padding-top: .4rem;
@@ -8,43 +7,35 @@
 
 :host label {
   font-size: 0.8rem;
-  margin-bottom:0;
-}
-:host .form-control {
-  border:0;
-  border-bottom: 2px solid #373a3c;
-  border-radius:0;
-  padding-left:0;
-}
-:host input[readonly] {
-  background:inherit;
+  margin-bottom: 0;
 }
 
-:host .input-group-addon {
-  cursor: pointer;
-  background-color:white;
-  border:0;
+:host .form-control {
+  border: 0;
   border-bottom: 2px solid #373a3c;
-  border-radius:0;
-}
-:host .inner-container .row div[class*=' col-']:first-of-type {
-  padding-left:0;
-}
-:host .inner-container .row div[class*=' col-']:last-of-type{
-  padding-right:0;
-}
-:host ngb-timepicker >>> .form-control {
-  text-align: center;
-  border:0;
-  border-bottom: 2px solid #373a3c;
-  border-radius:0;
-  padding-left:0;
-  padding-right:0;
-}
-:host ngb-timepicker[readonlyInputs='true'] >>> .form-control{
+  border-radius: 0;
+  padding-left: 0;
   background-color: inherit;
 }
 
+@media(max-width: 768px){
+   :host .inner-container {
+     padding: 0;
+   }
+}
+
+:host ngb-timepicker /deep/ .form-control {
+  text-align: center;
+  border: 0;
+  border-bottom: 2px solid #373a3c;
+  border-radius: 0;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+:host ngb-timepicker[readonlyInputs='true'] /deep/ .form-control {
+  background-color: inherit;
+}
 
 :host .custom-day {
   text-align: center;
@@ -53,9 +44,11 @@
   display: inline-block;
   width: 2rem;
 }
+
 :host .custom-day:hover {
   background-color: #e6e6e6;
 }
+
 :host .weekend {
   background-color: #f0ad4e;
   border-radius: 1rem;
