app component: removed summary component and grids. Added intial IndexedDB Service.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <ptt-navheader></ptt-navheader>
 <ptt-dayselect></ptt-dayselect>
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12 col-xl-10">
+  <!--<div class="row">-->
+    <!--<div class="col-xs-12 col-md-12 col-xl-10">-->
       <ptt-timerow></ptt-timerow>
       <ptt-timerow></ptt-timerow>
       <ptt-timerow></ptt-timerow>
       <ptt-timerow></ptt-timerow>
-    </div>
-    <div class="col-md-12 col-xl-2">
-      <ptt-summary></ptt-summary>
-    </div>
-  </div>
+    <!--</div>-->
+    <!--<div class="col-xs-12 col-md-12 col-xl-2">-->
+      <!--<ptt-summary></ptt-summary>-->
+    <!--</div>-->
+  <!--</div>-->
 </div>
